fix bug that caused white stripe to appear on firefox

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ body {
     width: max-content;
     /* top: 195px; */
     left: 5px;
-    background: #fff;
+    /* background: #fff; */
     color: #000;
     padding: 0px;
     font-family: Helvetica;
